Enhance OpenAiController to support web search functionality and improve logging. Update ChatCompletionRequest model to include web search flag. Refactor DeepSeekProvider to handle web search toggle and clean up unused code. Adjust pom.xml description for clarity and modify test.html to add web search toggle in the UI.